--- a/scripts/signup-flow/signup-flow.css
+++ b/scripts/signup-flow/signup-flow.css
@@ -5,7 +5,7 @@
     box-shadow: 0px 3px 24px rgba(0,0,0,0.16);
     height: auto;
     left: 0;
-    margin: 72px 16px 16px;
+    margin: 32px 16px 16px;
     overflow: hidden;
     padding: 0;
     position: fixed;
@@ -174,7 +174,7 @@
     z-index: 2;
 }
 .signup-dialog-content > .section {
-    padding: 0 0 56px 0;    
+    padding: 0 0 20px 0;    
 }
 .signup-dialog-content > .section > .default-content-wrapper > * {
     color: var(--text-color);
@@ -231,7 +231,7 @@
 
 @media (min-width: 600px) {
     .signup-dialog {
-        margin: 72px auto 16px;
+        margin: 32px auto 16px;
         max-width: 568px;
     }
     .signup-dialog-header {    
@@ -254,7 +254,7 @@
     }
     .step2-container .signup-dialog-steps,
     .step3-container .signup-dialog-steps {
-        margin-bottom: 60px;
+        margin-bottom: 20px;
     }
     .signup-dialog-content {        
         margin: 0 auto;
@@ -303,9 +303,9 @@
     .step2-container .signup-dialog-body-top-decor {
         background: url('/images/square-box-decor.svg') no-repeat top left;
         height: 186px;
-        left: 0;
+        left: -13px;
         position: absolute;
-        top: 12px;
+        top: -53px;
         width: 197px;
         z-index: 1;
     }  
@@ -340,7 +340,7 @@
         max-width: 250px;
     }
     .signup-dialog-content .product-interests .interests-container {
-        max-height: 380px;
+        max-height: 280px;
     }
 }
 @media (min-width: 1200px) {
